# playforge

./: .gitignore  CHANGELOG.md  README.md  angular.json  cors.json  eslint.config.mjs  firebase.json  firestore.rules  package-lock.json  package.json  storage.rules  tsconfig.json  tsconfig.spec.json
.github/workflows/: release-android.yml  release-linux.yml  release-macos.yml  release-portable.yml  release-windows.yml  release.yml
docs/: CLOUD_SYNC.md
scripts/: generate-icons.mjs  inject-env.mjs
src/: index.html  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon-manifest.json  icon.icns
src-tauri/src/: builder.rs  database.rs  lib.rs  main.rs
src-tauri/src/utils/logging/: file_writer.rs  log.rs
src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.html  app.routes.ts  app.scss  app.ts
src/app/components/add-product/: add-product.html  add-product.scss  add-product.spec.ts  add-product.ts
src/app/components/invoice-editor/: invoice-editor.html  invoice-editor.scss  invoice-editor.ts
src/app/components/invoice-renderer/: invoice-renderer.html  invoice-renderer.scss  invoice-renderer.ts
src/app/components/titlebar/: titlebar.html  titlebar.scss  titlebar.spec.ts  titlebar.ts
src/app/core/models/: catalog.model.ts  customer.model.ts  import.model.ts  (+2 more)
src/app/models/: product.model.ts
src/app/services/: invoice-layout.service.ts  invoice-overlay.service.ts  invoice.service.ts
src/assets/i18n/: en.json  tr.json
src/environments/: environment.ts
(+98 files in other folders)
